--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -20,3 +20,6 @@ once_cell = "1"
 urlencoding = "2"
 sha2 = "0.10"
 hex = "0.4"
+futures = "0.3"
+threadpool = "1"
+tokio = { version = "1", features = ["full"] }
