--- a/apps/desktop/Cargo.toml
+++ b/apps/desktop/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 resolver = "2"
 
 [dependencies]
-winit = {workspace = true}
 wgpu = {workspace = true}
 pollster = "0.2"
 env_logger = "0.10"
 abetterworld = { path = "../../abetterworld" }
+winit = { version = "0.29", features = ["android-native-activity"] }
 
 [build-dependencies]
 cc = "1.0"
