--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [workspace]
 members = [
     "abetterworld",
-    "apps/desktop",
+    "apps/desktop"
 ]
 resolver = "2"
 
 [workspace.dependencies]
-wgpu = "24.0.1"
+winit = { version = "0.29", features = ["android-native-activity"] }
+wgpu = {version = "25.0.2", features = ["webgpu"]}
 console_error_panic_hook = "0.1.7"
 console_log = "0.2"
 js-sys = "0.3.61"
