--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "2"
 [dependencies]
 bytemuck = { version = "1.10", features = ["derive"] }
 cgmath = "0.18"
-wgpu = {workspace = true}
+wgpu = {version = "25.0.2", features = ["webgpu"]}
 reqwest = { version = "0.11", features = ["json", "gzip", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -22,4 +22,17 @@ sha2 = "0.10"
 hex = "0.4"
 futures = "0.3"
 threadpool = "1"
+wasm-bindgen-futures = "0"
+log = "0.4"
+
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
+
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
+gloo-timers = { version = "0.3", features = ["futures"] }
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console", "Window", "Storage"] }
