--- a/apps/desktop/Cargo.toml
+++ b/apps/desktop/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2021"
 resolver = "2"
 
 [dependencies]
-wgpu = {workspace = true}
+wgpu = {version = "25.0.2"}
 pollster = "0.2"
 env_logger = "0.10"
 abetterworld = { path = "../../abetterworld" }
 winit = { version = "0.29", features = ["android-native-activity"] }
+log = "0.4"
+dotenv = "0"
 
 [build-dependencies]
 cc = "1.0"
