Better Web Caching; unit tests

--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -24,15 +24,19 @@ futures = "0.3"
 threadpool = "1"
 wasm-bindgen-futures = "0"
 log = "0.4"
-
+lru = "0.14.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
-
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
 gloo-timers = { version = "0.3", features = ["futures"] }
 wasm-bindgen = "0.2"
-js-sys = "0.3"
+wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console", "Window", "Storage"] }
+idb = "0.6"
+js-sys = "0.3"
+serde-wasm-bindgen = "0.6"
+console_log = "1.0"
+
