--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "rust-analyzer.debug.buildBeforeRestart": false
-  //"rust-analyzer.cargo.target": "wasm32-unknown-unknown"
+  "rust-analyzer.debug.buildBeforeRestart": false,
+  "rust-analyzer.cargo.target": "wasm32-unknown-unknown"
 }
