--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -26,6 +26,7 @@ wasm-bindgen-futures = "0"
 log = "0.4"
 lru = "0.14.0"
 async-recursion = "1.0"
+thiserror = "2.0.12"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
