--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -27,6 +27,7 @@ log = "0.4"
 lru = "0.14.0"
 async-recursion = "1.0"
 thiserror = "2.0.12"
+xxhash-rust = { version = "0.8", features = ["xxh3"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
