--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -24,9 +24,9 @@ futures = "0.3"
 threadpool = "1"
 wasm-bindgen-futures = "0"
 log = "0.4"
-lru = "0.14.0"
 async-recursion = "1.0"
 thiserror = "2.0.12"
+moka = { version = "0.12", features = ["sync"] }
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
