--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -28,6 +28,7 @@ async-recursion = "1.0"
 thiserror = "2.0.12"
 moka = { version = "0.12", features = ["sync"] }
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
+crossbeam-channel = "0.5"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
