--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -29,6 +29,7 @@ thiserror = "2.0.12"
 moka = { version = "0.12", features = ["sync"] }
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 crossbeam-channel = "0.5"
+num_cpus = "1.17.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
