--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "rust-analyzer.debug.buildBeforeRestart": false,
   //"rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   "rust-analyzer.cargo.target": "aarch64-apple-darwin",
-  "editor.inlayHints.enabled": "offUnlessPressed"
+  "editor.inlayHints.enabled": "offUnlessPressed",
+  "files.associations": {
+    "__bit_reference": "cpp"
+  }
 }
