--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "rust-analyzer.debug.buildBeforeRestart": false,
-  //"rust-analyzer.cargo.target": "wasm32-unknown-unknown",
-  "rust-analyzer.cargo.target": "aarch64-apple-darwin",
+  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  //"rust-analyzer.cargo.target": "aarch64-apple-darwin",
   "editor.inlayHints.enabled": "offUnlessPressed",
   "files.associations": {
     "__bit_reference": "cpp"
