--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -10,6 +10,9 @@ include = [
     "Cargo.toml",
 ]
 
+[package.metadata.cfg_aliases]
+wasm = 'all(target_arch = "wasm32", target_os = "unknown")'
+
 [dependencies]
 bytemuck = { version = "1.10", features = ["derive"] }
 cgmath = "0.18"
@@ -47,6 +50,10 @@ js-sys = "0.3"
 serde-wasm-bindgen = "0.6"
 console_log = "1.0"
 futures-util = "0.3"
+uuid = { version = "1.17", features = ["v4", "js"] }
+
+[build-dependencies]
+cfg_aliases = "0.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
 cmake = "0.1.54"
