--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -17,7 +17,7 @@ wasm = 'all(target_arch = "wasm32", target_os = "unknown")'
 bytemuck = { version = "1.10", features = ["derive"] }
 cgmath = "0.18"
 wgpu = {version = "25.0.2", features = ["webgpu"]}
-reqwest = { version = "0.11", features = ["json", "gzip", "blocking"] }
+reqwest = { version = "0.12", features = ["json", "gzip", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = "2"
@@ -31,19 +31,20 @@ sha2 = "0.10"
 hex = "0.4"
 futures = "0.3"
 threadpool = "1"
-wasm-bindgen-futures = "0"
 log = "0.4"
-async-recursion = "1.0"
 thiserror = "2.0.12"
 moka = { version = "0.12", features = ["sync"] }
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 crossbeam-channel = "0.5"
 num_cpus = "1.17.0"
+cfg-if = "1.0.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-timers = { version = "0.3", features = ["futures"] }
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0"
 wasm-bindgen-test = "0.3"
+wee_alloc = { version = "0.4", optional = true }
 web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console", "Window", "Storage"] }
 idb = "0.6"
 js-sys = "0.3"
@@ -51,6 +52,8 @@ serde-wasm-bindgen = "0.6"
 console_log = "1.0"
 futures-util = "0.3"
 uuid = { version = "1.17", features = ["v4", "js"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_closure = "0.3"
 
 [build-dependencies]
 cfg_aliases = "0.1"
@@ -61,8 +64,15 @@ cc = "1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 cxx = "1.0.78"
-# 0.30.0 does not compile at the moment (see https://github.com/google/autocxx/issues/1480)
 autocxx = { version = "0.28" }
 
 [features]
 paging_test = []
+
+[target.wasm32-unknown-unknown]
+rustflags = ["-C", "target-feature=+atomics"]
+# You also need `bulk-memory` for Rust < 1.87. For 1.87+ it's enabled by default
+# rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]
+
+[unstable]
+build-std = ["panic_abort", "std"]
