--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -54,6 +54,7 @@ futures-util = "0.3"
 uuid = { version = "1.17", features = ["v4", "js"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
+futures-channel = "0.3"
 
 [build-dependencies]
 cfg_aliases = "0.1"
