--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,21 +2,26 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --features paging_test -- --test-threads=1
+      - uses: actions/checkout@v4
+      - name: Build Library
+        run: cargo build -p abetterworld --verbose
+      - name: Build Desktop
+        run: cargo build -p desktop --verbose
+      - name: Build Web
+        run: make build-web
+      - name: Run Native Tests
+        run: cargo test --manifest-path abetterworld/Cargo.toml --features paging_test -- --test-threads=1
+      - name: Run Web Tests
+        run: make test-web
