--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🦀 Set up Rust
-        uses: actions/setup-rust@v1
+        uses: actions-rs/toolchain@v1
         with:
-          rust-version: stable
+          toolchain: stable
+          override: true
 
       - name: 📡 Add WebAssembly target
         run: rustup target add wasm32-unknown-unknown
