--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
 
 [workspace.dependencies]
 winit = { version = "0.29", features = ["android-native-activity"] }
-wgpu = {version = "25.0.2", features = ["webgpu"]}
+wgpu = {version = "25.0.2", features = ["webgpu", "vulkan", "gles"]}
 console_error_panic_hook = "0.1.7"
 console_log = "0.2"
 js-sys = "0.3.61"
