--- a/apps/android/Cargo.toml
+++ b/apps/android/Cargo.toml
@@ -9,8 +9,13 @@ name = "abetterworld_android"
 crate-type = [ "cdylib"]
 
 [dependencies]
-wgpu = { workspace = true }
+wgpu = {version = "25.0.2", features = ["webgpu"]}
 winit = { workspace = true }
 abetterworld = { path = "../../abetterworld" }
 log = "0.4"
 jni = "0.21"
+futures = "0.3"
+android_log-sys = "0.3"
+ndk = "0.9"
+pollster = "0.3" 
+raw-window-handle = "=0.6.2"
