--- a/abetterworld/Cargo.toml
+++ b/abetterworld/Cargo.toml
@@ -41,6 +41,7 @@ xxhash-rust = { version = "0.8", features = ["xxh3"] }
 crossbeam-channel = "0.5"
 num_cpus = "1.17.0"
 cfg-if = "1.0.1"
+directories = "6.0.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-timers = { version = "0.3", features = ["futures"] }
