--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "rust-analyzer.debug.buildBeforeRestart": false,
-  //"rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   //"rust-analyzer.cargo.target": "aarch64-apple-darwin",
   //"rust-analyzer.cargo.target": "aarch64-linux-android",
   "editor.inlayHints.enabled": "offUnlessPressed",
