--- a/bindings/web/Cargo.toml
+++ b/bindings/web/Cargo.toml
@@ -8,8 +8,8 @@ resolver = "2"
 crate-type = ["cdylib"]
 
 [dependencies]
-winit = { version = "0.29", features = ["android-native-activity"] }
-wgpu = {version = "25.0.2", features = ["webgpu"]}
+winit = { workspace = true }
+wgpu = { workspace = true }
 web-sys = { version = "0.3", features = [
     "default",
     "Document",
@@ -30,14 +30,14 @@ web-sys = { version = "0.3", features = [
     "EventTarget",
     "console"
 ] }
-pollster = "0.2"
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
-wasm-bindgen-test = "0.3"
+pollster = "0.4"
+wasm-bindgen = { workspace = true }
+wasm-bindgen-futures = { workspace = true }
+wasm-bindgen-test = { workspace = true }
 console_error_panic_hook = "0.1"
 abetterworld = { path = "../../crates/abetterworld" }
 log = "0.4"
-console_log = "1.0"
+console_log = { workspace = true }
 
 [build]
 target = "wasm32-unknown-unknown"
