--- a/examples/desktop/Cargo.toml
+++ b/examples/desktop/Cargo.toml
@@ -8,7 +8,7 @@ resolver = "2"
 wgpu = { workspace = true }
 pollster = "0.4"
 env_logger = "0.11"
-abetterworld = { path = "../../crates/abetterworld" }
+abetterworld = { path = "../../crates/abetterworld", features=["profile-tracy"] }
 winit = { workspace = true }
 log = "0.4"
 dotenv = "0"
