--- a/crates/abetterworld/Cargo.toml
+++ b/crates/abetterworld/Cargo.toml
@@ -20,6 +20,9 @@ wasm = 'all(target_arch = "wasm32", target_os = "unknown")'
 profile-tracy = ["tracing-tracy/enable", "tracy-client/enable", "wgpu-profiler/tracy"]
 paging_test = []
 
+[dev-dependencies]
+rand = "0.8"
+
 [dependencies]
 tracing = "0.1"
 tracing-subscriber = "0.3"
