--- a/crates/abetterworld/Cargo.toml
+++ b/crates/abetterworld/Cargo.toml
@@ -52,6 +52,7 @@ num_cpus = "1.17.0"
 cfg-if = "1.0.3"
 directories = "6.0.0"
 rayon = "1.11.0"
+web-time = "1.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-timers = { version = "0.3", features = ["futures"] }
