--- a/crates/abetterworld/Cargo.toml
+++ b/crates/abetterworld/Cargo.toml
@@ -18,15 +18,24 @@ wasm = 'all(target_arch = "wasm32", target_os = "unknown")'
 
 [features]
 paging_test = []
+profile-tracy = []
 
 [dev-dependencies]
 rand = "0.8"
 
 [dependencies]
+tracy-client-sys = { version = "=0.24.3", optional = false }
+tracy-client     = { version = "=0.18.0", optional = false, default-features = false, features = [
+  "enable", "ondemand", "only-localhost"
+]}
+tracing-tracy    = { version = "=0.11.4", optional = false }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+
 wgpu = { workspace = true }
 wgpu-profiler = { version = "0.24", optional = true, features = ["tracy"] }
+
 bytemuck = { version = "1.23", features = ["derive"] }
 cgmath = "0.18"
 reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "blocking", "http2", "rustls-tls-webpki-roots"] }
