--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ js-sys = "0.3.77"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 wasm-bindgen-test = "0.3"
+tracing = { version = "0.1", features = ["log"] }
