--- a/crates/abetterworld/Cargo.toml
+++ b/crates/abetterworld/Cargo.toml
@@ -51,6 +51,7 @@ directories = "6.0.0"
 rayon = "1.11.0"
 web-time = "1.1"
 tokio = { version = "1", features = ["full"] }
+smallvec = "1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-timers = { version = "0.3", features = ["futures"] }
