--- a/crates/abetterworld/Cargo.toml
+++ b/crates/abetterworld/Cargo.toml
@@ -29,6 +29,8 @@ cgmath = "0.18"
 reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "blocking", "http2", "rustls-tls-webpki-roots"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+config = "0.14"
+dotenvy = "0.15"
 url = "2"
 byteorder = "1.5"
 image = "0.25"
