--- a/crates/abetterworld/Cargo.toml
+++ b/crates/abetterworld/Cargo.toml
@@ -18,12 +18,11 @@ wasm = 'all(target_arch = "wasm32", target_os = "unknown")'
 
 [features]
 paging_test = []
-profile-tracy = []
+profile-tracy = ["tracy-client"]
 
 [dependencies]
 wgpu = { workspace = true }
 wgpu-profiler = { version = "0.24", optional = true, features = ["tracy"] }
-
 bytemuck = { version = "1.23", features = ["derive"] }
 cgmath = "0.18"
 reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "blocking", "http2", "rustls-tls-webpki-roots"] }
@@ -50,10 +49,9 @@ crossbeam-channel = "0.5"
 num_cpus = "1.17.0"
 cfg-if = "1.0.3"
 directories = "6.0.0"
-rayon = "1.11.0"
 web-time = "1.1"
-tokio = { version = "1", features = ["full"] }
 smallvec = "1"
+tracing = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-timers = { version = "0.3", features = ["futures"] }
@@ -70,7 +68,7 @@ futures-util = "0.3"
 uuid = { version = "1.18", features = ["v4", "js"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
-futures-channel = "0.3"
+async-channel = "2"
 
 [build-dependencies]
 cfg_aliases = "0.2"
@@ -82,10 +80,11 @@ cc = "1.2"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 cxx = "1.0.168"
 autocxx = { version = "0.30" }
-tracy-client-sys = { version = "=0.24.3", optional = false }
-tracy-client     = { version = "=0.18.0", optional = false, default-features = false, features = [
+tracy-client-sys = { version = "=0.24.3", optional = true }
+tracy-client     = { version = "=0.18.0", optional = true, default-features = false, features = [
   "enable", "ondemand", "only-localhost"
 ]}
 tracing-tracy    = { version = "=0.11.4", optional = false }
-tracing = { workspace = true }
 tracing-subscriber = "0.3"
+rayon = "1.11.0"
+tokio = { version = "1", features = ["full"] }
