--- a/examples/desktop/Cargo.toml
+++ b/examples/desktop/Cargo.toml
@@ -6,12 +6,14 @@ resolver = "2"
 
 [dependencies]
 wgpu = { workspace = true }
+wgpu-profiler = { workspace = true }
 pollster = "0.4"
 env_logger = "0.11"
 abetterworld = { path = "../../crates/abetterworld", features=["profile-tracy"] }
 winit = { workspace = true }
 log = "0.4"
 dotenv = "0"
+tracing = { workspace = true }
 
 [build-dependencies]
 cc = "1.2"
