--- a/bindings/android/Cargo.toml
+++ b/bindings/android/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = [ "cdylib"]
 [dependencies]
 wgpu = {version = "26.0.1", features = ["webgpu"]}
 winit = { workspace = true }
-abetterworld = { path = "../../crates/abetterworld" }
+abetterworld = { path = "../../crates/abetterworld", features=["profile-tracy"] }
 tracing = { workspace = true }
 log = "0.4"
 jni = "0.21"
